Ajout du font OpenSans

--- a/PwaPo/src/index.html
+++ b/PwaPo/src/index.html
@@ -19,6 +19,23 @@
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
   <link href="/build/app.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+
+<script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDZe3ss2iu9jPJU32v0OXHPAuZnQ-muJfo",
+    authDomain: "pwa-mobile-factory.firebaseapp.com",
+    databaseURL: "https://pwa-mobile-factory.firebaseio.com",
+    projectId: "pwa-mobile-factory",
+    storageBucket: "pwa-mobile-factory.appspot.com",
+    messagingSenderId: "967228831959"
+  };
+  firebase.initializeApp(config);
+</script>
+
   <script src="/build/app.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
